--- a/demo-parent/pom.xml
+++ b/demo-parent/pom.xml
@@ -513,6 +513,7 @@
                     <includes>
                         <include>**/*.java</include>
                     </includes>
+                    <reportNameSuffix>${project.artifactId}</reportNameSuffix>
                 </configuration>
                 <executions>
                     <execution>
