--- a/demo-parent/pom.xml
+++ b/demo-parent/pom.xml
@@ -23,6 +23,19 @@
         <cd.env.pega.cookie.mode>BULK</cd.env.pega.cookie.mode>
 
         <dir.build>${project.build.directory}/build</dir.build>
+        <dir.build.dump>${project.build.directory}/build-dump</dir.build.dump>
+        <dump.mode>off</dump.mode>
+
+        <cd.pega.app.name/>
+        <cd.pega.app.version/>
+        <ninja.codebase.id/>
+        <ninja.ut.coverage.skip>true</ninja.ut.coverage.skip>
+        <ninja.sonar.analyze.skip>true</ninja.sonar.analyze.skip>
+        <sonar-maven-plugin.skip>true</sonar-maven-plugin.skip>
+        <sonar.skip>${ninja.sonar.analyze.skip}</sonar.skip>
+        <sonar.host.url>http://localhost:9000</sonar.host.url>
+        <sonar.login>ninja-pileline</sonar.login>
+        <sonar.password>pawxa0-torsyf-moZfim</sonar.password>
 
         <maven-antrun-plugin.version>1.8</maven-antrun-plugin.version>
         <maven-assembly-plugin.version>3.1.0</maven-assembly-plugin.version>
@@ -42,6 +55,7 @@
         <maven-site-plugin.version>3.7</maven-site-plugin.version>
         <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
         <maven-surefire-plugin.version>2.20.1</maven-surefire-plugin.version>
+        <maven-sonar-plugin.version>3.4.1.1168</maven-sonar-plugin.version>
         <maven-versions-plugin.version>2.5</maven-versions-plugin.version>
         <maven-properties-plugin.version>1.0.0</maven-properties-plugin.version>
         <deploy-maven-plugin.version>1.0.12.RELEASE</deploy-maven-plugin.version>
@@ -321,32 +335,31 @@
             <artifactId>jcl-over-slf4j</artifactId>
             <scope>runtime</scope>
         </dependency>
-         <dependency>
-             <groupId>ru.lanit.bpm.goblin</groupId>
-             <artifactId>goblin-deploy-core</artifactId>
-             <scope>runtime</scope>
-         </dependency>
-         <dependency>
-             <groupId>ru.lanit.bpm.ninja</groupId>
-             <artifactId>ninja-ra-goblin-ext-pega-archive</artifactId>
-             <scope>runtime</scope>
-         </dependency>
-         <dependency>
-             <groupId>ru.lanit.bpm.ninja</groupId>
-             <artifactId>ninja-ra-goblin-ext-pega-activity</artifactId>
-
-             <scope>runtime</scope>
-         </dependency>
-         <dependency>
-             <groupId>ru.lanit.bpm.goblin</groupId>
-             <artifactId>goblin-deploy-ext-db-sql</artifactId>
-             <scope>runtime</scope>
-         </dependency>
-         <dependency>
-             <groupId>ru.lanit.bpm.goblin</groupId>
-             <artifactId>goblin-deploy-ext-embedded</artifactId>
-             <scope>runtime</scope>
-         </dependency>
+        <dependency>
+            <groupId>ru.lanit.bpm.goblin</groupId>
+            <artifactId>goblin-deploy-core</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>ru.lanit.bpm.ninja</groupId>
+            <artifactId>ninja-ra-goblin-ext-pega-archive</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>ru.lanit.bpm.ninja</groupId>
+            <artifactId>ninja-ra-goblin-ext-pega-activity</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>ru.lanit.bpm.goblin</groupId>
+            <artifactId>goblin-deploy-ext-db-sql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>ru.lanit.bpm.goblin</groupId>
+            <artifactId>goblin-deploy-ext-embedded</artifactId>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -433,6 +446,11 @@
                     <version>${maven-surefire-plugin.version}</version>
                 </plugin>
                 <plugin>
+                    <groupId>org.sonarsource.scanner.maven</groupId>
+                    <artifactId>sonar-maven-plugin</artifactId>
+                    <version>${maven-sonar-plugin.version}</version>
+                </plugin>
+                <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>exec-maven-plugin</artifactId>
                     <version>${exec-maven-plugin.version}</version>
@@ -462,6 +480,11 @@
                     <groupId>ru.lanit.bpm.common</groupId>
                     <artifactId>deploy-maven-plugin</artifactId>
                     <version>${deploy-maven-plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>ru.lanit.bpm.ninja</groupId>
+                    <artifactId>ninja-delivery-maven-plugin</artifactId>
+                    <version>${ninja.version}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -672,6 +695,23 @@
                     </dependency>
                 </dependencies>
             </plugin>
+
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <configuration>
+                    <skip>${sonar-maven-plugin.skip}</skip>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>deploy-to-sonar</id>
+                        <phase>deploy</phase>
+                        <goals>
+                            <goal>sonar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
@@ -687,6 +727,76 @@
             <properties>
                 <cd.env.id>qa</cd.env.id>
             </properties>
+        </profile>
+        <profile>
+            <id>build-server</id>
+            <properties>
+                <dump.mode>on</dump.mode>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>ru.lanit.bpm.ninja</groupId>
+                        <artifactId>ninja-delivery-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>update-codebase</id>
+                                <goals>
+                                    <goal>update-codebase-filter</goal>
+                                </goals>
+                                <configuration>
+                                    <codebaseId>${ninja.codebase.id}</codebaseId>
+                                    <createNew>true</createNew>
+                                    <fullReplication>new</fullReplication>
+                                    <applicationRuleKey>RULE-APPLICATION ${cd.pega.app.name} ${cd.pega.app.version}</applicationRuleKey>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>sonar-analyze</id>
+                                <phase>deploy</phase>
+                                <goals>
+                                    <goal>sonar-analyze</goal>
+                                </goals>
+                                <configuration>
+                                    <pegaTimeout>360000</pegaTimeout>
+                                    <codebaseId>${ninja.codebase.id}</codebaseId>
+                                    <skip>${ninja.sonar.analyze.skip}</skip>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>code-coverage</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <!--suppress MavenModelInspection -->
+                            <argLine>${ninja.ut.coverage.args} ${maven-surefire-plugin.arg.line}</argLine>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>ru.lanit.bpm.ninja</groupId>
+                        <artifactId>ninja-delivery-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>ninja-coverage</id>
+                                <goals>
+                                    <goal>coverage-start</goal>
+                                    <goal>coverage-finish</goal>
+                                </goals>
+                                <configuration>
+                                    <skip>${ninja.ut.coverage.skip}</skip>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
     </profiles>
 
