--- a/lending/pom.xml
+++ b/lending/pom.xml
@@ -17,7 +17,10 @@
         <maven-assembly-plugin.skip-assembly>false</maven-assembly-plugin.skip-assembly>
 
         <cd.pega.ruleset.max.version>01-07-01</cd.pega.ruleset.max.version>
+        <cd.pega.app.name>NinjaDemo</cd.pega.app.name>
         <cd.pega.app.version>01.07</cd.pega.app.version>
+        <ninja.ut.coverage.skip>false</ninja.ut.coverage.skip>
+        <ninja.sonar.analyze.skip>false</ninja.sonar.analyze.skip>
 
         <cd.env.pega.ninja-developer.id>developer@lending</cd.env.pega.ninja-developer.id>
         <cd.env.pega.ninja-developer.password>rules</cd.env.pega.ninja-developer.password>
