--- a/order-fulfillment/pom.xml
+++ b/order-fulfillment/pom.xml
@@ -18,7 +18,10 @@
         <maven-assembly-plugin.skip-assembly>false</maven-assembly-plugin.skip-assembly>
 
         <cd.pega.ruleset.max.version>01-01-01</cd.pega.ruleset.max.version>
+        <cd.pega.app.name>OrderFul</cd.pega.app.name>
         <cd.pega.app.version>01.01.01</cd.pega.app.version>
+        <ninja.ut.coverage.skip>false</ninja.ut.coverage.skip>
+        <ninja.sonar.analyze.skip>false</ninja.sonar.analyze.skip>
 
         <cd.env.pega.ninja-developer.id>developer@orders</cd.env.pega.ninja-developer.id>
         <cd.env.pega.ninja-developer.password>rules</cd.env.pega.ninja-developer.password>
