RD-387 Turn metrics on

--- a/lending/pom.xml
+++ b/lending/pom.xml
@@ -21,6 +21,7 @@
         <cd.pega.app.version>01.07</cd.pega.app.version>
         <ninja.ut.coverage.skip>false</ninja.ut.coverage.skip>
         <ninja.sonar.analyze.skip>false</ninja.sonar.analyze.skip>
+        <ninja.codebase.id>${project.groupId}:${project.artifactId}</ninja.codebase.id>
 
         <cd.env.pega.ninja-developer.id>developer@lending</cd.env.pega.ninja-developer.id>
         <cd.env.pega.ninja-developer.password>rules</cd.env.pega.ninja-developer.password>
