RD-387 Turn sonar analyzer on

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
     <properties>
         <maven-assembly-plugin.skip-assembly>false</maven-assembly-plugin.skip-assembly>
+        <sonar.skip>false</sonar.skip>
     </properties>
 
     <modules>
