RD-387 Turn sonar analyzer on

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.pegadevops.ninja</groupId>
         <artifactId>demo-parent</artifactId>
-        <version>CURRENT</version>
+        <version>2.1.02.local</version>
         <relativePath>demo-parent/pom.xml</relativePath>
     </parent>
 
@@ -19,6 +19,8 @@
         <ninja.sonar.analyze.skip>false</ninja.sonar.analyze.skip>
         <ninja.codebase.id>${project.groupId}:${project.artifactId}</ninja.codebase.id>
 
+        <cd.pega.app.name>Ninja</cd.pega.app.name>
+        <cd.pega.app.version>02.01</cd.pega.app.version>
         <cd.env.pega.ninja-developer.id>developer@orders</cd.env.pega.ninja-developer.id>
         <cd.env.pega.ninja-developer.password>rules</cd.env.pega.ninja-developer.password>
     </properties>
