--- a/demo-parent/pom.xml
+++ b/demo-parent/pom.xml
@@ -749,7 +749,7 @@
                                 </goals>
                                 <configuration>
                                     <createNew>true</createNew>
-                                    <fullReplication>new</fullReplication>
+                                    <fullReplication>yes</fullReplication>
                                     <applicationRuleKey>RULE-APPLICATION ${cd.pega.app.name} ${cd.pega.app.version}</applicationRuleKey>
                                 </configuration>
                             </execution>
