RD-387 Update CD properties

--- a/demo-parent/pom.xml
+++ b/demo-parent/pom.xml
@@ -32,7 +32,7 @@
         <ninja.ut.coverage.skip>true</ninja.ut.coverage.skip>
         <ninja.sonar.analyze.skip>true</ninja.sonar.analyze.skip>
         <sonar.skip>${ninja.sonar.analyze.skip}</sonar.skip>
-        <sonar.host.url>http://localhost:9000</sonar.host.url>
+        <sonar.host.url>http://sonar:9000</sonar.host.url>
         <sonar.login>ninja-pipeline</sonar.login>
         <sonar.password>pawxa0-torsyf-moZfim</sonar.password>
 
