RD-387 Plugin Ninja Metrics

--- a/demo-parent/pom.xml
+++ b/demo-parent/pom.xml
@@ -695,7 +695,7 @@
                 </dependencies>
             </plugin>
 
-            <plugin>
+<!--            <plugin>
                 <groupId>org.sonarsource.scanner.maven</groupId>
                 <artifactId>sonar-maven-plugin</artifactId>
                 <executions>
@@ -707,7 +707,7 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin>-->
         </plugins>
     </build>
 
