RD-387 Deployemnt time customization of UIKit version

--- a/order-fulfillment/build.xml
+++ b/order-fulfillment/build.xml
@@ -107,6 +107,14 @@
                 </instance>
                 <instance inskey="DATA-ADMIN-SYSTEM-SETTINGS AZURE!AZURE/ATLAS/API/VERSION"/>
                 <instance inskey="DATA-ADMIN-SYSTEM-SETTINGS AZURE!AZURE/ATLAS/API/KEY"/>
+
+                <!--Applications-->
+                <instance inskey="RULE-APPLICATION ORDERFUL 01.01.02">
+                    <prop reference=".pyDependsOnApplication(2).pyAppVersion" value="#{uikit.version}"/>
+                </instance>
+                <instance inskey="RULE-APPLICATION ORDERFULDEV 01.01.01">
+                    <prop reference=".pyDependsOnApplication(4).pyAppVersion" value="#{uikit.version}"/>
+                </instance>
             </pegaarchive>
 
             <pegaactivity chunkid="delete-orders-user" componentid="orders-webapp" classname="@baseclass" activityname="DeleteObject">
