RD-387 default configuration for PE 7.2.2, 7.3, 7.3.1, 7.4

--- a/src/main/resources/config/env-pe-730.properties
+++ b/src/main/resources/config/env-pe-730.properties
@@ -13,5 +13,6 @@ pega.db.type=POSTGRESQL
 pega.url=http://localhost:8080/prweb/PRServlet
 pega.operator.id=Administrator@pega.com
 pega.operator.password=install
+pega.uikit.version=09.01
 pega.truststore.file=
 pega.truststore.password=
