--- a/demo-parent/pom.xml
+++ b/demo-parent/pom.xml
@@ -688,7 +688,7 @@
         <profile>
             <id>env-dev</id>
             <properties>
-                <cd.env.pega.url>http://pega74-pe:8080/prweb/PRServlet</cd.env.pega.url>
+                <cd.env.pega.url>http://localhost:8080/prweb/PRServlet</cd.env.pega.url>
             </properties>
         </profile>
         <profile>
@@ -849,6 +849,12 @@
                     </plugin>
                 </plugins>
             </build>
+        </profile>
+        <profile>
+            <id>test-bulk-mode</id>
+            <properties>
+                <cd.env.pega.cookie.mode>BULK</cd.env.pega.cookie.mode>
+            </properties>
         </profile>
     </profiles>
 
